--- a/style/SCSS/extend/_extend.scss
+++ b/style/SCSS/extend/_extend.scss
@@ -5,13 +5,16 @@
     font-size:$coverTitleFontSize;
     font-family:$coverTilteFontFamily;
     color:$coverSheetTitleColor;
+    margin:30px;
 }
 %coverSheetSize{
     width:100%;
     height:800px;
     display:flex;
+    flex-direction: column;
     justify-content:center;
     align-items:center;
+    
 }
 %summary{
     display:flex;
@@ -33,7 +36,7 @@
     width:70%;
 }
 %mediumTitlte{
-    font-size:30px;
+    font-size:45px;
     font-family:$coverTilteFontFamily;
     color:cornflowerblue;
     margin:30px;
@@ -78,5 +81,12 @@
     width:50%;
     margin:auto;
     
+
+}
+%articleColor{
+    display:flex;
+    flex-direction: column;
+    
+
 
 }
