--- a/style/SCSS/style.css
+++ b/style/SCSS/style.css
@@ -10,12 +10,14 @@
   font-size: 50px;
   font-family: AbrilFatface;
   color: red;
+  margin: 30px;
 }
 
 .firstpage {
   width: 100%;
   height: 800px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -42,7 +44,7 @@
 }
 
 .medium__title {
-  font-size: 30px;
+  font-size: 45px;
   font-family: AbrilFatface;
   color: cornflowerblue;
   margin: 30px;
@@ -91,6 +93,11 @@
   margin: auto;
 }
 
+.article__color {
+  display: flex;
+  flex-direction: column;
+}
+
 @font-face {
   font-family: AbrilFatface;
   src: url(./FONT/Abril_Fatface.zip);
@@ -101,12 +108,19 @@
 }
 
 /******COVERSHEET******/
+.firstpage img {
+  width: 40%;
+  height: 80%;
+}
+
 /******I.PRESENTATION PROJET*******/
-img {
+.article__reseau img {
   width: 80px;
   height: 80px;
 }
 
 a {
   margin: 15px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/******II.Description graphique et ergonomique*******//*# sourceMappingURL=style.css.map */
