ajout des couleurs

--- a/style/SCSS/style.scss
+++ b/style/SCSS/style.scss
@@ -91,3 +91,58 @@ a{
     @extend %articleColor;
 
 }
+.color_ul{
+    background-color:burlywood;
+    
+}
+.color_list{
+    list-style: none;
+    width:50%;
+    margin:auto;
+}
+.color_list1{
+    color:#0388A6;
+    list-style: none ;
+}
+.color_list2{
+    color:#0396A6;
+}
+.color_list3{
+    color:#F2E8D5;
+}
+.color_list4{
+    color:#F2AC57;
+}
+.color_list5{
+    color:#BF4A30;
+}
+.color_list6{
+    color:#62B7D9;
+}
+.color_list7{
+    color:#F2B279;
+}
+.color_list8{
+    color:#F26241;
+}
+.color_list9{
+    color:#260101;
+}
+.color_list10{
+    color:#A62E2E;
+}
+.color_list11{
+    color:#024873;
+}
+.color_list12{
+    color:#F29F05;
+}
+.color_list13{
+    color:#D97904;
+}
+.color_list14{
+    color:#D9D055;
+}
+.color_list15{
+    color:#D9C359;
+}
